--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=AcadevDB;Trusted_connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost,1433;Database=AcadevDB;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=true;"
   }
 }
