--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 
+# App Settings
+appsettings.json
+appsettings.*.json
+
 # Tye
 .tye/
 
